[Pgr]fix:(gallery.css):vhange slider arrow z-index so it wouln't be ontop of editor menu in mobile

--- a/pro-gallery-renderer/src/components/styles/gallery.scss
+++ b/pro-gallery-renderer/src/components/styles/gallery.scss
@@ -121,7 +121,7 @@
 
   .nav-arrows-container {
     left: auto;
-    z-index: 17;
+    z-index: 1;
     position: absolute;
     width: 100px;
     height: 100px;
